0.4.17/_sources/api/napari.layers.Layer.rst
napari.layers.Layer
===================

.. currentmodule:: napari.layers

.. autoclass:: Layer
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~Layer.as_layer_data_tuple
   
   
      ~Layer.bind_key
   
   
      ~Layer.block_update_properties
   
   
      ~Layer.click_plane_from_click_data
   
   
      ~Layer.create
   
   
      ~Layer.data_to_world
   
   
      ~Layer.get_ray_intersections
   
   
      ~Layer.get_source_str
   
   
      ~Layer.get_status
   
   
      ~Layer.get_value
   
   
      ~Layer.projected_distance_from_mouse_drag
   
   
      ~Layer.refresh
   
   
      ~Layer.save
   
   
      ~Layer.set_view_slice
   
   
      ~Layer.world_to_data
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Layer.affine
      ~Layer.blending
      ~Layer.class_keymap
      ~Layer.cursor
      ~Layer.cursor_size
      ~Layer.data
      ~Layer.editable
      ~Layer.experimental_clipping_planes
      ~Layer.extent
      ~Layer.help
      ~Layer.interactive
      ~Layer.loaded
      ~Layer.metadata
      ~Layer.name
      ~Layer.ndim
      ~Layer.opacity
      ~Layer.rotate
      ~Layer.scale
      ~Layer.shear
      ~Layer.source
      ~Layer.thumbnail
      ~Layer.translate
      ~Layer.translate_grid
      ~Layer.visible
      
      
      
      
   
   

   .. rubric:: Details